
* Christian Schlüter added support for f2fs labels in the `mkfs` step.

* Step runners may now implement the `run_even_if_skipped` method to
  have code that is run whether the step is skipped or not. The
  `debootstrap` step now uses this to run `apt-get update` always.
  This allows a rootfs tarball that is old to be used, without the
  Packages files being too old to be usable.

Version 0.13.2, released 2018-05-06
------------------------------------

* New build, after CI screwed up.

Version 0.13.1, released 2018-04-30
----------------------------------

* Fix build-dependency on pandoc.

Version 0.13.1, released 2018-04-30
----------------------------------


Version 0.12, released 2018-02-24
----------------------------------

* Minor Debian packaging fixes.

Version 0.11, released 2018-02-10
----------------------------------

* Build fixes so that .deb doesn't contain Python 2.7 stuff, which
  isn't wanted or used.

Version 0.10, released 2018-02-10
---------------------------------

* Build tweaks to make builds work on Debian unstable.

Version 0.9, released 2017-10-11
---------------------------------

* Stuart Prescott added a `variant` parameter to the `vmdebootstrap`
  plugin.

* Stuart and Lars documented some of the dependencies in README. If
  they're insufficient, report a bug please.

* Stuart added a `qemu-debootstrap` plugin to build images for a
  foreign architecture.

* Lars Wirzenius added the function `vmdb.runcm_chroot` for executing
  programs inside a chroot. It's a short wrapper around `vmdb.runcmd`,
  but is a little easier to get right than invoking **chroot**(8) via
  `runcmd`. Michael Stapelberg fixed the function.

* Lars Wirzenius changed it so that `.vmdb` files can have structured
  YAML values and their constituent strings are used as Jinja2
  templates. Previously vmdb2 would just crash. This opens a
  possibility to have things like "list of packages to install" for